# OMArk

./: COPYING  README.md  genome_simulation.py  omamerQuality_lite.py  omamer_species_placement.py  omark_env.yml  pyproject.toml  setup.cfg  setup.py
.github/workflows/: python-publish.yml  run_example.yml
example_data/: UP000005640_9606.omamer  UP000005640_9606.sum
omark/: __init__.py  files.py  graphics.py  omamer_utils.py  omark.py  scoring.py  species_determination.py  utils.py
omark/assets/: summarized_report.txt  textual_report.txt
src/omark/: cli.py  files.py  graphics.py  omamer_species_placement.py  omamer_utils.py  omark.py  scoring.py  species_determination.py
src/omark/assets/: summarized_report.txt  textual_report.txt
utils/: Contamination_chromosome_filtering.ipynb  Contextualize_OMA.ipynb  Explore_Data.ipynb  contamination_chromosome_filtering.py  genome_simulation.py  mapping_template.txt  omark_contextualize.py  plot_all_results.py
